# llm-api-tester

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_ci_release.yml  feature_request.yml  protocol_compatibility.yml
.github/workflows/: ci.yml  pr-linked-issue.yml  release-macos.yml
scripts/: build-placeholder.mjs
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compat.rs  db.rs  history.rs  keystore.rs  lib.rs  main.rs  models.rs  report.rs  runner.rs  schema.sql
src-tauri/src/protocol/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs
src/components/: ProviderForm.tsx  RequestBuilder.tsx  ResponsePanel.tsx  Select.tsx  Sidebar.tsx
src/pages/: HistoryPage.tsx  MatrixPage.tsx  SettingsPage.tsx  WorkspacePage.tsx
src/stores/: appStore.test.ts  appStore.ts  preferences.ts
